<resources>
    <string name="app_name">YaYaXueYu</string>

    <!--   工具类  tag -->
    <item type="id" name="tag_viewholder"></item>
    <item type="id" name="tag_listdata"></item>
    <item type="id" name="tag_viewclick"></item>

    <!-- 登录 -->
    <string name="login_uid">员工号：</string>
    <string name="login_pwd">密    码：</string>
    <string name="login_uid_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_msg_fail">登录失败</string>
    <string name="login_msg_invaluid">用户名不能为空</string>
    <string name="login_msg_invalpwd">密码不能为空</string>
    <string name="login_msg_invaluser">请先清除上次登录账户的缓存数据</string>
    <string name="login_msg_invalgrid">用户所属定格变更，请先清除上次登录账户的缓存数据</string>
    <string name="login_msg_invaldate">系统时间误差较大，请调整系统时间</string>
    <string name="login_msg_usererror">用户信息异常，不能正常登录</string>
    <string name="login_msg_progress">登录中...</string>
    <string name="login_msg_online">登录成功</string>
    <string name="login_msg_offline">离线登录成功</string>
    <string name="login_msg_pwdfail">登录失败，确认用户名及密码。</string>
    <string name="login_msg_userice">该用户已离职或冻结！</string>
    <string name="login_msg_device">该设备已冻结！</string>
    <string name="login_msg_nogrid">未分配定格，请联系管理员。</string>
    <string name="msg_err_netfail">网络请求失败</string>

    <!-- fourth -->
    <string name="fourth_msg_1">1 Fragment跳转</string>
    <string name="fourth_msg_2">2 </string>
    <string name="fourth_msg_3">3 Fragment中嵌套WebView</string>
    <string name="fourth_msg_4">4 整体Fragment嵌套WebView</string>
    <string name="fourth_msg_5">5 退出系统</string>
    <string name="fourth_msg_6">6 Activity跳转</string>

    <!-- third -->
    <string name="third_msg_1">1 自定义控件之开篇</string>
    <string name="third_msg_2">2 自定义控件之动画篇</string>
    <string name="third_msg_3">3 自定义控件之绘图篇</string>
    <string name="third_msg_4">4 自定义控件之视图篇</string>
    <string name="third_msg_5">5 Toolbar的使用</string>
    <string name="third_msg_6">6 AppbarLayout的简单用法</string>
    <string name="third_msg_7">7 语音Fragment</string>
    <string name="third_msg_8">8 Bmob</string>
    <string name="third_msg_9">9 JieCao播放</string>
    <string name="third_msg_10">10</string>
    <string name="third_msg_11">11</string>
    <string name="third_msg_12">12</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
