<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_app"
              android:orientation="vertical">

    <include layout="@layout/top_navigation"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 1 -->
            <LinearLayout
                android:id="@+id/third_rl_1"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_angry"/>

                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_1"/>

            </LinearLayout>

            <!-- 2 -->
            <LinearLayout
                android:id="@+id/third_rl_2"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_basic"/>

                <!--2-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_2"/>

            </LinearLayout>

            <!-- 3 -->
            <LinearLayout
                android:id="@+id/third_rl_3"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_cool"/>

                <!--3-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_3"/>


            </LinearLayout>

            <!-- 4 -->
            <LinearLayout
                android:id="@+id/third_rl_4"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_cry"/>

                <!--4-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_4"/>


            </LinearLayout>

            <!-- 5 -->
            <LinearLayout
                android:id="@+id/third_rl_5"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_err"/>

                <!--5-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_5"/>


            </LinearLayout>
            <!-- 6 -->
            <LinearLayout
                android:id="@+id/third_rl_6"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_evil"/>

                <!--6-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_6"/>


            </LinearLayout>
            <!-- 7 -->
            <LinearLayout
                android:id="@+id/third_rl_7"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_kiss"/>

                <!--7-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_7"/>


            </LinearLayout>
            <!-- 8 -->
            <LinearLayout
                android:id="@+id/third_rl_8"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_laugh"/>

                <!--8-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_8"/>


            </LinearLayout>
            <!-- 9 -->
            <LinearLayout
                android:id="@+id/third_rl_9"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_shame"/>

                <!--9-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_9"/>


            </LinearLayout>
            <!-- 10 -->
            <LinearLayout
                android:id="@+id/third_rl_10"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_tongue"/>

                <!--10-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_10"/>


            </LinearLayout>
            <!-- 11 -->
            <LinearLayout
                android:id="@+id/third_rl_11"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_wink"/>

                <!--11-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_11"/>


            </LinearLayout>
            <!-- 12 -->
            <LinearLayout
                android:id="@+id/third_rl_12"
                style="@style/system_title_all">

                <TextView
                    style="@style/system_title_img"
                    android:background="@drawable/ic_action_emo_wonder"/>

                <!--12-->
                <TextView
                    style="@style/system_title_text"
                    android:text="@string/third_msg_12"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>