<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/login_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_login"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="118dp"
        android:layout_marginTop="50dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/login_tv_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:text="@string/login_uid"
                android:textColor="@android:color/white"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/login_et_uid"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:layout_toRightOf="@id/login_tv_uid"
                android:background="@drawable/bg_login_pwd"
                android:hint="@string/login_uid_hint"
                android:maxLength="128"
                android:singleLine="true"
                android:text="HelloWorld"
                android:textColor="#092102"
                android:textSize="16sp"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/login_tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:text="密    码："
                android:textColor="@android:color/white"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/login_et_pwd"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:layout_toRightOf="@id/login_tv_pwd"
                android:background="@drawable/bg_login_pwd"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="128"
                android:singleLine="true"
                android:text="HelloAndroid"
                android:textColor="#092102"
                android:textSize="16sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/color_cccccc"
            android:gravity="center"
            android:text="登录"/>
    </LinearLayout>

</RelativeLayout>